scss/sheets/_item.scss
@use "../abstracts" as *;
@use "../mixins" as *;

.shadowdark.sheet.item {
	@include p-reset;
	color: white;
	font-size: 18px;

	input {
		@include p-reset;
		font-family: "Montserrat-Medium";
		font-size: 16px;
		background-color: var(--form-background);

		text-overflow: ellipsis;
		text-align: center;

		background: rgba(0, 0, 0, 0.05);
		border: none;
	}

	label {
		@include p-reset;
		display: block;

		font-family: "Old Newspaper Font";
		font-size: 22px;
		font-weight: bold;

		line-height: 1.1;

		border: none;
	}

	.armor-details {
		@include p-reset;
		display: grid;
		grid-template-columns: repeat(4, 1fr);
		grid-column: span 3;
		column-gap: 4px;
	}

	.armor-detail {
		background-color: var(--form-background);
		display: grid;
		row-gap: 4px;
	}

	.coins {
		display: grid;
		row-gap: 4px;
		background-color: var(--form-background);
	}

	.coin-box {
		display: grid;
		grid-template-columns: 2fr 1fr;

		align-items: center;

		text-align: center;

		label {
			font-size: 18px;
			font-weight: normal;
		}
	}

	.coin-value {
		text-align: center;

		input {
			@include p-reset;

			text-overflow: ellipsis;
			text-align: center;

			background: rgba(0, 0, 0, 0.05);
			border: none;
		}
	}

	.magic-item-properties,
	.talent-properties {
		@include p-reset;
		grid-column: span 3;
		row-gap: 4px;
		column-gap: 8px;
		display: grid;
		grid-template-columns: max-content min-content 1fr;
	}

	.talent-property.talent-effects {
		grid-column: span 3;
	}

	.magic-details,
	.talent-details {
		@include p-reset;
		display: grid;
		grid-column: span 3;

		column-gap: 4px;
		row-gap: 8px;

		li {
			list-style-type: none;
			background-color: var(--background-highlight);
		}
	}

	.effect-header-data,
	.effect-header,
	.effect-data {
		display: grid;
		gap: 4px;
		grid-template-columns: 30px 150px 50px 50px 50px 1fr;
		font-weight: bold;
		font-size: 14px;
		align-items: center;

		effect-icon {
			img {
				height: 24px;
				width: 24px;
				border-radius: 2px;
				display: inline-block;
			}
		}
	}

	.effect-header {
		font-size: 16px;
	}

	.effect-data {
		background: var(--form-background);
	}

	.item-list {
		.effect-source {
			font-size: 12px;
		}
		.effect-name {
			padding: 3px 0;
			border-top: 0px groove #FFF;
			border-bottom: 0px groove #FFF;

			img {
				flex: 0 0 36px;
				margin-right: 5px;
				width: 36px;
				height: 36px;
				border-radius: 3px;
			}

			h4 {
				font-size: 14px;
				flex: 1;
				margin: 0;
				line-height: 36px;
			}
		}
	}

	.item-toggles {
		display: grid;
		row-gap: 4px;
	}

	.equipped,
	.light-source,
	.magic-item,
	.treasure {
		display: grid;
		grid-template-columns: 2fr 1fr;
		align-items: center;
		column-gap: 8px;
		background-color: var(--form-background);
	}

	.item-light {
		@include p-reset;
		display: grid;
		grid-template-columns: 1fr 1fr;
	}

	.item-details {
		@include p-reset;
		margin: 4px;
		display: grid;
		grid-template-columns: repeat(3, 1fr);
		column-gap: 4px;
		row-gap: 8px;
		align-items: start;
	}

	.item-description {
		@include p-reset;
		display: grid;
		row-gap: 8px;
		grid-template-rows: min-content minmax(350px, max-content);

		.editor {
			background-color: var(--form-background);
		}

		label {
			display: block;
			@include p-reset;

			font-family: "Old Newspaper Font";
			font-size: 20px;
			font-weight: bold;
			text-decoration: underline;

			line-height: 1.1;

			border: none;
		}
	}

	.item-header {
		@include p-reset;

		display: grid;
		grid-template-columns: 68px 1fr;

		column-gap: 4px;

		align-items: center;
	}

	.item-name {
		font-family: "Old Newspaper Font";
		font-size: 2.5rem;

		height: 100%;
	}

	.item-sidebar {
		display: grid;
		grid-column: 2;
		align-items: start;
		row-gap: 8px;
	}

	.light-timer {
		display: grid;
		row-gap: 4px;
		background-color: var(--form-background);
	}


	.npc-attack-details {
		@include p-reset;
		display: grid;
		grid-template-columns: repeat(3, 1fr);
		grid-column: span 2;
		column-gap: 4px;
	}

	.npc-attack-detail {
		background-color: var(--form-background);
		display: grid;
		row-gap: 4px;
	}

	.slots {
		display: grid;
		row-gap: 4px;
		background-color: var(--form-background);
	}

	.spell-details {
		@include p-reset;
		display: grid;
		grid-template-columns: repeat(3, 1fr);
		grid-column: span 3;
		column-gap: 4px;
	}

	.spell-detail {
		background-color: var(--form-background);
		display: grid;
		row-gap: 4px;
	}

	.spell-duration {
		@include p-reset;
		display: grid;
		grid-template-columns: 1fr 3fr;
		column-gap: 4px;

	}

	.weapon-details {
		@include p-reset;
		display: grid;
		grid-template-columns: repeat(5, 1fr);
		grid-column: span 3;
		column-gap: 4px;
	}

	.weapon-detail {
		background-color: var(--form-background);
		display: grid;
		row-gap: 4px;
	}

	.item-navigation {
		&__flex {
			display: flex;
			justify-content: space-evenly;
			align-items: baseline;

			a {
				@include p-reset;
				margin: 4px;

				font-family: "Old Newspaper Font";
				font-size: 1.5rem;
				line-height: 1;

				color: $primary-color;

				&.active {
					text-decoration: underline;
					font-weight: bold;
					font-size: 1.6rem;
				}
			}
		}
	}

	.item-properties {
		@include p-reset;
		display: grid;
		grid-column: span 3;
		column-gap: 4px;
	}

	.item-property {
		@include p-reset;
		display: grid;
		grid-template-columns: max-content 1fr;
		column-gap: 8px;
		font-family: "Montserrat-Medium";
		font-size: 16px;

		p {
			background-color: var(--form-background);
		}
	}

	.item-property-list {
		&:hover {
			cursor: pointer;
			box-shadow: 0 0 5px var(--color-shadow-primary);
		}
	}
}

